--- a/Fading Suns 4th Edition - Pax Alexius/src/Fading_Suns_4th_Edition_Pax_Alexius.scss
+++ b/Fading Suns 4th Edition - Pax Alexius/src/Fading_Suns_4th_Edition_Pax_Alexius.scss
@@ -1,4 +1,8 @@
-*, *::after, *::before {
+$sheet-width: 852px;
+$semitransparent: rgba(255, 255, 255, 0.5);
+$column-gap: 30px;
+
+*,*::after,*::before {
     box-sizing: border-box;
 }
 
@@ -9,11 +13,11 @@
 
 div.sheet-fs-sheet {
     margin: auto;
-    min-width: 852px;
-    max-width: 852px;
+    min-width: $sheet-width;
+    max-width: $sheet-width;
     background: url(https://i.ibb.co/t3xLwhN/fs-sheet-background.jpg) top left repeat;
     background-attachment: scroll;
-    background-size: 852px;
+    background-size: $sheet-width;
 }
 
 div.sheet-fs-sheet-container {
@@ -37,7 +41,7 @@ input {
     height: initial;
     padding: 3px;
     margin: 0;
-    background: rgba(255, 255, 255, 0.5);
+    background: $semitransparent;
 }
 
 input [type=text] {
@@ -51,11 +55,12 @@ input[type=number] {
     margin-left: 5px;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-    -moz-appearance: textfield !important;
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+  // turn off spinners for all number field in firefox
+  -moz-appearance: textfield !important;
 }
 
 input[type=text],
@@ -72,9 +77,10 @@ input[type=text] {
 input[type=text],
 input[type=number],
 textarea {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: $semitransparent;
 }
 
+// CHROME: hide spinner area at right when not hovering over a number
 input[type=number]:not(:hover)::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin-right: 0;
@@ -89,9 +95,8 @@ button[type=roll].sheet-fs-hidden {
 }
 
 b {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 label {
     font-weight: normal;
     display: inline-block;
@@ -102,16 +107,14 @@ label {
     color: initial;
     position: relative;
 }
-
 select {
     width: initial;
     height: initial;
     margin: initial;
-    padding: initial;
-    padding: 0;
+    padding:initial;
+    padding:0;
     margin: 0;
 }
-
 textarea {
     width: 50px;
     height: initial;
@@ -121,24 +124,21 @@ textarea {
     padding: 0;
     margin: 0;
 }
-
 button,
 button:hover,
 button:active {
     background-image: initial;
 }
 
-button[type=roll] {
+button[type="roll"] {
     margin-left: initial;
     margin-right: initial;
     text-shadow: none;
 }
-
 button[type=roll]:before {
     vertical-align: middle;
     font-size: 1.2em;
 }
-
 h1 {
     line-height: 4em;
     height: 4em;
@@ -150,27 +150,23 @@ h1 {
     background-color: Black;
     color: White;
 }
-
 h2 {
     line-height: 3em;
     height: 3em;
     font-size: 3rem;
     color: initial;
 }
-
 h3 {
     line-height: 2em;
     height: 2em;
     font-size: 2rem;
     color: initial;
 }
-
-h4, h5, h6 {
+h4,h5,h6 {
     line-height: 1.2em;
     font-size: 1.2rem;
     color: initial;
 }
-
 .sheet-fs-sheet {
     width: 100%;
     min-width: 100%;
@@ -181,8 +177,8 @@ h4, h5, h6 {
     min-height: 2.15em;
     margin: 0;
     resize: vertical;
-    overflow: auto;
-    background-color: rgba(255, 255, 255, 0.5);
+    overflow:auto;
+    background-color: $semitransparent;
 }
 
 .sheet-fs-sheet .repcontrol_del,
@@ -194,6 +190,7 @@ h4, h5, h6 {
 
 /* make error row more visible (colorblind users could not see slightly darker border )
 also need 1 more level in selector or base css will override border */
+
 .sheet-fs-sheet .repitem.repitembroken {
     border: 0.3rem dashed #FF0044 !important;
     margin: 0.2rem 0 0.4rem 0;
@@ -211,7 +208,7 @@ also need 1 more level in selector or base css will override border */
 .repcontainer.editmode .repitem .itemcontrol {
     z-index: 3;
     background-color: gray;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255,255,255,0.5);
 }
 
 div.repcontrol {
@@ -224,9 +221,9 @@ div.repcontrol {
 }
 
 .repcontrol_add::before {
-    content: "&";
+    content: '&';
     visibility: visible;
-    font-family: pictos;
+    font-family: pictos ;
     background-color: #fff;
     border: 0.1rem solid #000;
     border-radius: 0.2rem;
@@ -236,9 +233,9 @@ div.repcontrol {
 }
 
 .repcontrol .repcontrol_edit:after {
-    font-family: Arial;
+    font-family: Arial ;
     font-weight: bold;
-    content: "☰";
+    content: '☰';
     visibility: visible;
     font-family: pictos;
     background-color: #fff;
@@ -251,18 +248,18 @@ div.repcontrol {
 
 .editmode ~ .repcontrol .repcontrol_edit:after {
     font-family: Pictos;
-    content: "3";
-    width: 1.6rem;
+    content: '3';
+    width:1.6rem;
 }
 
 .repcontrol_edit:hover:before,
-.repcontrol_edit:hover:after,
+.repcontrol_edit:hover:after, 
 .repcontrol_add:hover:before {
     color: red !important;
     box-shadow: 0.1rem 0.1rem 0.2rem #333;
 }
 
-.repcontrol .btn {
+.repcontrol .btn{
     border: none;
     color: white;
     font-size: 0;
@@ -274,7 +271,7 @@ div.repcontrol {
 }
 
 .repcontrol .btn:focus {
-    outline: 0;
+  outline: 0;
 }
 
 .repcontrol_add,
@@ -283,7 +280,7 @@ div.repcontrol {
     background: none;
     color: transparent !important;
     border: none;
-    box-shadow: none;
+    box-shadow: none;    
 }
 
 .repcontrol_del,
@@ -297,7 +294,7 @@ div.repcontrol {
 }
 
 .sheet-fs-noshow {
-    display: none;
+    display:none;
 }
 
 .sheet-rolltemplate-fs-button {
@@ -369,6 +366,7 @@ div.repcontrol {
     color: #205b0b;
 }
 
+
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-failure {
     color: #5b0b0b;
 }
@@ -395,6 +393,7 @@ div.repcontrol {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
+
     align-items: flex-start;
     align-content: flex-start;
     justify-items: stretch;
@@ -403,13 +402,13 @@ div.repcontrol {
 
 .sheet-fs-tall-textarea {
     min-height: 100px;
-    height: 100%;
+    height:100%;
     align-self: stretch;
 }
 
 .sheet-fs-supertall-textarea {
     min-height: 300px;
-    height: 100%;
+    height:100%;
     align-self: stretch;
 }
 
@@ -418,7 +417,7 @@ div.repcontrol {
     display: grid;
     grid-auto-columns: 1fr 1fr 1fr;
     grid-auto-flow: column;
-    grid-column-gap: 30px;
+    grid-column-gap: $column-gap;
 }
 
 .sheet-fs-lifepath {
@@ -426,36 +425,26 @@ div.repcontrol {
     display: grid;
     grid-auto-columns: 1fr 1fr 1fr;
     grid-auto-flow: column;
-    grid-column-gap: 30px;
+    grid-column-gap: $column-gap;
 }
 
 .sheet-fs-traits {
     width: 100%;
     display: grid;
-    grid-template: "skills-header skills-header  characteristics" -webkit-max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-template: "skills-header skills-header  characteristics" max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-template:
+        "skills-header skills-header  characteristics" max-content
+        "skills-1      skills-2       characteristics" 1fr / 1fr 1fr 1fr;
+    grid-column-gap: $column-gap;
+
     align-items: stretch;
     align-content: stretch;
     justify-items: stretch;
     justify-content: space-between;
 }
-
-.sheet-fs-skills-header {
-    grid-area: skills-header;
-}
-
-.sheet-fs-skills-1 {
-    grid-area: skills-1;
-}
-
-.sheet-fs-skills-2 {
-    grid-area: skills-2;
-}
-
-.sheet-fs-characteristics {
-    grid-area: characteristics;
-}
+.sheet-fs-skills-header   { grid-area: skills-header; }
+.sheet-fs-skills-1        { grid-area: skills-1; }
+.sheet-fs-skills-2        { grid-area: skills-2; }
+.sheet-fs-characteristics { grid-area: characteristics; }
 
 .sheet-fs-characteristic-category {
     align-self: stretch;
@@ -469,9 +458,11 @@ div.repcontrol {
 .sheet-fs-traits {
     width: 100%;
     display: grid;
-    grid-template: "skills-header skills-header  characteristics" -webkit-max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-template: "skills-header skills-header  characteristics" max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-template:
+        "skills-header skills-header  characteristics" max-content
+        "skills-1      skills-2       characteristics" 1fr / 1fr 1fr 1fr;
+    grid-column-gap: $column-gap;
+
     align-items: stretch;
     align-content: stretch;
     justify-items: stretch;
@@ -488,7 +479,6 @@ div.repcontrol {
     justify-content: center;
     align-self: stretch;
 }
-
 .sheet-fs-characteristic .sheet-fs-characteristic-label,
 .sheet-fs-characteristic .sheet-fs-characteristic-label span,
 .sheet-fs-skill .sheet-fs-skill-label,
@@ -502,7 +492,6 @@ input.sheet-fs-beneficeaffliction {
     overflow-x: hidden;
     text-overflow: ellipsis;
 }
-
 .sheet-fs-skill + .sheet-fs-col {
     width: 100%;
 }
@@ -516,7 +505,8 @@ input.sheet-fs-beneficeaffliction {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-column-gap: $column-gap;
+
     align-items: stretch;
     align-content: stretch;
     justify-items: stretch;
@@ -524,7 +514,7 @@ input.sheet-fs-beneficeaffliction {
 }
 
 .sheet-fs-skill > div.sheet-fs-skill-normal {
-    width: 100%;
+    width:100%;
     display: inline-flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -535,45 +525,37 @@ input.sheet-fs-beneficeaffliction {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice {
     display: none;
 }
-
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice,
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover {
     position: absolute;
     z-index: 5;
     background-color: #ffffff;
     border-radius: 5px;
-    border: 1px solid #0f0909;
+    border: 1px solid rgb(15, 9, 9);
     padding: 2px;
     margin-left: 26px;
     margin-top: 119px;
-    width: -webkit-max-content;
     width: max-content;
     background: url(https://i.ibb.co/t3xLwhN/fs-sheet-background.jpg) 25% 25%;
     background-attachment: scroll;
     background-size: 850px;
     display: grid;
     grid-auto-flow: row;
-    grid-template-rows: -webkit-max-content;
     grid-template-rows: max-content;
 }
-
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > input,
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > input {
     height: 25px;
 }
-
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div,
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div {
     display: grid;
     grid-auto-flow: column;
-    grid-template-rows: repeat(9, -webkit-max-content);
     grid-template-rows: repeat(9, max-content);
 }
-
 div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div:nth-child(2),
 div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div:nth-child(2),
 div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div:nth-child(5),
@@ -584,7 +566,6 @@ div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-charac
     border-top: 1px solid black;
     margin-top: 2px;
 }
-
 div.sheet-fs-skill-roll-characteristic-choice > div > div > label {
     margin-left: 3px;
 }
@@ -592,3 +573,4 @@ div.sheet-fs-skill-roll-characteristic-choice > div > div > label {
 .sheet-fs-caps {
     text-transform: capitalize;
 }
+
