fixed firefox layout issue

--- a/Fading Suns 4th Edition - Pax Alexius/Fading_Suns_4th_Edition_Pax_Alexius.css
+++ b/Fading Suns 4th Edition - Pax Alexius/Fading_Suns_4th_Edition_Pax_Alexius.css
@@ -2,18 +2,21 @@
     box-sizing: border-box;
 }
 
-.charsheet {
+.ui-dialog .charsheet {
     box-sizing: border-box;
     padding: 0px;
 }
 
 div.sheet-fs-sheet {
-    margin: auto;
-    min-width: 852px;
-    max-width: 852px;
+    margin-top: -28px;
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-bottom: -10px;
+    min-width: 890px;
+    max-width: 890px;
     background: url(https://i.ibb.co/t3xLwhN/fs-sheet-background.jpg) top left repeat;
     background-attachment: scroll;
-    background-size: 852px;
+    background-size: 890px;
 }
 
 div.sheet-fs-sheet-container {
@@ -32,7 +35,7 @@ h3.sheet-fs-uppercase-header {
     height: 1.7em;
 }
 
-input {
+.sheet-fs-sheet input {
     width: auto;
     height: initial;
     padding: 3px;
@@ -40,59 +43,45 @@ input {
     background: rgba(255, 255, 255, 0.5);
 }
 
-input [type=text] {
-    width: 50px;
-}
-
-input[type=number] {
+.sheet-fs-sheet input[type=number] {
     text-align: center;
     width: 25px;
     min-width: 25px;
     margin-left: 5px;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+.sheet-fs-sheet button[type=roll] {
+    margin: 0 0 0 0;
+}
+
+.sheet-fs-sheet input[type=number]::-webkit-inner-spin-button,
+.sheet-fs-sheet input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+.sheet-fs-sheet input[type=number] {
     -moz-appearance: textfield !important;
 }
 
-input[type=text],
-input[type=number] {
+.sheet-fs-sheet input[type=text],
+.sheet-fs-sheet input[type=number] {
     border: 0 solid #666;
     border-bottom-width: 0.1rem;
     margin-bottom: 0.1rem;
 }
 
-input[type=text] {
-    min-width: 1em;
-}
-
-input[type=text],
-input[type=number],
-textarea {
+.sheet-fs-sheet input[type=text],
+.sheet-fs-sheet input[type=number],
+.sheet-fs-sheet textarea {
     background-color: rgba(255, 255, 255, 0.5);
 }
 
-input[type=number]:not(:hover)::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin-right: 0;
-}
-
-button[type=roll] {
-    margin: 0 0 0 0;
-}
-
-button[type=roll].sheet-fs-hidden {
+.sheet-fs-sheet button[type=roll].sheet-fs-hidden {
     display: none;
 }
 
-b {
-    font-weight: bold;
-}
-
-label {
+.sheet-fs-sheet label {
     font-weight: normal;
     display: inline-block;
     margin-bottom: initial;
@@ -100,10 +89,9 @@ label {
     width: initial;
     height: initial;
     color: initial;
-    position: relative;
 }
 
-select {
+.sheet-fs-sheet select {
     width: initial;
     height: initial;
     margin: initial;
@@ -112,8 +100,7 @@ select {
     margin: 0;
 }
 
-textarea {
-    width: 50px;
+.sheet-fs-sheet textarea {
     height: initial;
     resize: initial;
     overflow-x: hidden;
@@ -122,24 +109,24 @@ textarea {
     margin: 0;
 }
 
-button,
-button:hover,
-button:active {
+.sheet-fs-sheet button,
+.sheet-fs-sheet button:hover,
+.sheet-fs-sheet button:active {
     background-image: initial;
 }
 
-button[type=roll] {
+.sheet-fs-sheet button[type=roll] {
     margin-left: initial;
     margin-right: initial;
     text-shadow: none;
 }
 
-button[type=roll]:before {
+.sheet-fs-sheet button[type=roll]:before {
     vertical-align: middle;
     font-size: 1.2em;
 }
 
-h1 {
+.sheet-fs-sheet h1 {
     line-height: 4em;
     height: 4em;
     font-size: 4rem;
@@ -151,30 +138,24 @@ h1 {
     color: White;
 }
 
-h2 {
+.sheet-fs-sheet h2 {
     line-height: 3em;
     height: 3em;
     font-size: 3rem;
     color: initial;
 }
 
-h3 {
+.sheet-fs-sheet h3 {
     line-height: 2em;
     height: 2em;
     font-size: 2rem;
     color: initial;
 }
 
-h4, h5, h6 {
+.sheet-fs-sheet h4, h5, h6 {
     line-height: 1.2em;
     font-size: 1.2rem;
     color: initial;
-}
-
-.sheet-fs-sheet {
-    width: 100%;
-    min-width: 100%;
-    margin-top: -1em;
 }
 
 .sheet-fs-inline-textarea {
@@ -398,7 +379,7 @@ div.repcontrol {
     align-items: flex-start;
     align-content: flex-start;
     justify-items: stretch;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .sheet-fs-tall-textarea {
@@ -466,18 +447,6 @@ div.repcontrol {
     margin-left: 3px;
 }
 
-.sheet-fs-traits {
-    width: 100%;
-    display: grid;
-    grid-template: "skills-header skills-header  characteristics" -webkit-max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-template: "skills-header skills-header  characteristics" max-content "skills-1      skills-2       characteristics" 1fr/1fr 1fr 1fr;
-    grid-column-gap: 30px;
-    align-items: stretch;
-    align-content: stretch;
-    justify-items: stretch;
-    justify-content: space-between;
-}
-
 .sheet-fs-characteristic,
 .sheet-fs-skill {
     display: inline-flex;
@@ -532,8 +501,8 @@ input.sheet-fs-beneficeaffliction {
     align-items: center;
     justify-content: flex-start;
     align-self: stretch;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    position: relative;
+    overflow: visible;
 }
 
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice {
@@ -544,12 +513,12 @@ input.sheet-fs-beneficeaffliction {
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover {
     position: absolute;
     z-index: 5;
+    top: 1px;
+    left: 26px;
     background-color: #ffffff;
     border-radius: 5px;
     border: 1px solid #0f0909;
     padding: 2px;
-    margin-left: 26px;
-    margin-top: 119px;
     width: -webkit-max-content;
     width: max-content;
     background: url(https://i.ibb.co/t3xLwhN/fs-sheet-background.jpg) 25% 25%;
