--- a/Fading Suns 4th Edition - Pax Alexius/src/Fading_Suns_4th_Edition_Pax_Alexius.pug
+++ b/Fading Suns 4th Edition - Pax Alexius/src/Fading_Suns_4th_Edition_Pax_Alexius.pug
@@ -4,7 +4,7 @@ mixin skill(name, value)
             button.fs-d20(type='roll' name='roll_disabledbutton' value='' disabled='')
             .fs-skill-roll-characteristic-choice
                 label
-                    span(data-i18n=`${name}`).fs-caps #{name}
+                    span(data-i18n=`${name}`) #{name}
                     |  +
                 each characteristicName in ['strength', 'dexterity', 'endurance', 'wits', 'perception', 'will', 'presence', 'intuition', 'faith']
                     div
@@ -14,7 +14,7 @@ mixin skill(name, value)
                             button.fs-d20(type='roll' name=`roll_${characteristicName}_${name}` value=`&{template:fs-GoalRoll} {{characterName=@{character_name}}} {{characteristicName-i18n=^{${characteristicName}}}}     {{skillName-i18n=^{${name}}}} {{goal=[[@{${characteristicName}}+@{${name}}]]}}     {{roll=[[1d20cs[[{@{${characteristicName}}+@{${name}},19}kl1]]cf20]]}}     {{csc=${characteristicName}_${name}_csc}} {{cfc=${characteristicName}_${name}_cfc}}`)
                             label(data-i18n=`${characteristicName}`) #{characteristicName}
             label.fs-skill-label
-                span(data-i18n=`${name}`) ${name}
+                span(data-i18n=`${name}`) #{name}
         input(type='number' name=`attr_${name}` min='0' value=`${value}` title=`@{${name}}. Default value: ${value}.`)
 
 mixin characteristic(name)
