Adding image to repo for future use
It feels weird to set the url before the image is uploaded, so I'm just adding the file and a commented-out line setting the image to what the github version should be after upload. In the meantime, it's still using imgur.

--- a/Dresden Files Role-Playing Game/DFRPG.css
+++ b/Dresden Files Role-Playing Game/DFRPG.css
@@ -552,6 +552,7 @@ button.sheet-refresh-fate {
 	font-size: 2em;
 	border-width: 1px;
 	background: url(https://i.imgur.com/DBK5i45.png);
+	/* background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Dresden%20Files%20Role-Playing%20Game/pentagram.png);*/
 	background-position: center;
 	background-size: cover;
 }
