--- a/Inspectress-Inc/Inspectres.css
+++ b/Inspectress-Inc/Inspectres.css
@@ -87,21 +87,26 @@ span.sheet-dee {
 }
 
 /*CUSTOM - TABLE*/
+.sheet-short-col{
+    width: 5% !important;
+}
 .sheet-table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     font-size: 1rem;
     width: 100%;
 }
-  
-.sheet-table td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+
+.sheet-color-gray{
+    background-color: #dddddd;
 }
   
-.sheet-table  tr:nth-child(even) {
-    background-color: #dddddd;
+.sheet-row-titles{
+    background: darkslategray;
+    color: white;
+    border: 1px solid ;
+    text-align: left;
+    padding: 8px;
 }
 
 /*CUSTOM ROLLTEMPLATE*/
