relative links for images

--- a/Pendragon-french/Pendragon-french.css
+++ b/Pendragon-french/Pendragon-french.css
@@ -660,8 +660,8 @@ sheet-titre2 {
       height: auto;
       padding: 2px;
       margin: 3px;
-      background: url(https://i.imgur.com/prSwHKj.jpg) top left;
-      /*background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Pendragon-french/Images/parchemin.jpg) top left;      */
+      /* inline image url : https://i.imgur.com/prSwHKj.jpg */
+      background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Pendragon-french/Images/parchemin.jpg) top left;
       background-size: cover;
       background-repeat: no-repeat;
       font-family: "Courier New", Courier, monospace;
