--- a/Supers-Revised-Edition/supers-revised.css
+++ b/Supers-Revised-Edition/supers-revised.css
@@ -1,8 +1,11 @@
 
 
-.charsheet {background-color: white; background-repeat: repeat; color: grey;}
+.charsheet {background-color: white; background-repeat: repeat;}
 
-h2 {color: blue;}
+h2 {
+    color: blue;
+    text-align: center;
+}
 
 .sheet-short {text-align: center; width: 10%; margin: 2px;}
 
@@ -54,9 +57,15 @@ label.sheet-comp {display: inline; font-size: 18pt; color: blue;}
 
 /* --------- Text ------------- */
 
-span.sheet-bold{
+.sheet-bold{
   font-weight: 800;
   font-size: medium;
+}
+
+input[type="number"].sheet-bold{
+  font-weight: 900;
+  font-size: 1.5em;
+  width: 40px;
 }
 
 label {
@@ -73,6 +82,10 @@ input[type="number"]{
   border-style: none none solid none;
   border-color: black;
   border-radius: 0px;
+}
+
+input[type="number"]{
+  text-align: center;
 }
 
 textarea {
@@ -134,13 +147,18 @@ input[type=number].sheet-txtfield {
   flex-flow: column nowrap;
 }
 
+.sheet-flex-row {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
 .sheet-section {
     padding: 5px;
     min-height: 90%;
 }
 
 .sheet-border{
-    border: solid 2px black;
+    border: solid 4px black;
 }
 
 /*  ----- Character Sheet Structure -------
@@ -151,32 +169,33 @@ It uses 'Grid template areas' to name  each sheet section,
 so that they can be positioned in the grid easily,
  while also providing a human-readable overview. */
 div.sheet-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr 3fr 3fr 3fr 2fr 1fr;
-  grid-template-areas:"name        logo          "
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr;
+    grid-template-areas:"name        logo          "
                       "resistances aptitudes     "
                       "advantages  disadvantages "
                       "powers      powers        "
                       "tracker     comp-dice     "
                       "cost        cost          ";
-    grid-gap: 2px;
-  width:    750px; /* Defines the width and height of the sheet */
-  height:   1000px;
+    grid-gap: 4px;
+    width:    750px; /* Defines the width and height of the sheet */
+    height:   1000px;
 }
 
 
 /* NAME SECTION */
 
 div.sheet-name{
-    grid-area: name;
+  grid-area: name;
+  padding: 30px 0px 0px 50px;
 }
 
 div.sheet-name input[type="text"]{
-    width: 230px;
+  width: 230px;
 }
 div.sheet-name h6{
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 /* LOGO SECTION */
@@ -186,10 +205,20 @@ div.sheet-logo{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/Supers-RED-v1-00/Supers-Revised-Edition/images/logo.png);
   background-size: 285px 125px;
   background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+
 }
 
 div.sheet-resistances{
-    grid-area:resistances;
+  grid-area:resistances;
+}
+
+div.sheet-resistances h2{
+  width: 200px;
+  padding-left: 50px;
 }
 
 div.sheet-resistances .sheet-res-grid{
@@ -200,32 +229,61 @@ div.sheet-resistances .sheet-res-grid{
 }
 
 div.sheet-resistances input[type="text"].sheet-notes{
-    width: 130px;
+  width: 120px;
+}
+div.sheet-resistances input[type="number"]{
+  border-style: solid;
 }
 
+
 div.sheet-aptitudes{
-    grid-area: aptitudes;
+  grid-area: aptitudes;
+}
+
+div.sheet-aptitudes input[type="text"].sheet-bold,
+div.sheet-powers input[type="text"].sheet-bold{
+  font-size: 1.4em;
+  width: 110px;
+}
+
+div.sheet-aptitudes input[type="text"].sheet-longap{
+  width: 150px;
 }
 
 div.sheet-advantages{
-    grid-area: advantages;
+  grid-area: advantages;
+}
+
+div.sheet-advantages input[type="number"],
+div.sheet-disadvantages input[type="number"]{
+  width: 30px;
+}
+
+div.sheet-advantages input[type="text"].sheet-notes,
+div.sheet-disadvantages input[type="text"].sheet-notes{
+  width: 285px;
 }
 
 div.sheet-disadvantages{
-    grid-area: disadvantages;
+  grid-area: disadvantages;
 }
 div.sheet-powers{
-    grid-area: powers;
+  grid-area: powers;
 }
+
+/* COMP DICE */
 div.sheet-comp-dice{
-    grid-area: comp-dice;
+  grid-area: comp-dice;
+  display: flex;
 }
+
+
 div.sheet-temp-comp-dice{
-    grid-area: temp-comp-dice;
+  grid-area: temp-comp-dice;
 }
 
 div.sheet-cost{
-    grid-area: cost;
+  grid-area: cost;
 }
 
 /* TRACKER SECTION */
@@ -233,7 +291,7 @@ div.sheet-cost{
 div.sheet-tracker{
   grid-area: tracker;
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/Supers-RED-v1-00/Supers-Revised-Edition/images/Original-Tracker.png);
-  background-size: 360px 145px;
+  background-size: 360px 140px;
   background-repeat: no-repeat;
 }
 
