Added new Salvo Mode images

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -557,9 +557,8 @@ input.sheet-salvoRollButton + span.sheet-salvoRollButton, input.sheet-salvoRollB
 	z-index: 10;
 	display: grid;
 	left: 0;
-	grid-template-columns: 32px 450px 450px 100px;
-	grid-template-rows: 30px 133px 425px 620px 1200px;
-	grid-template-areas: ". title title . " ". taskDice threatDice ." ". skills skills ." ". tools tools . " ". . . .";
+	grid-template-columns: repeat(30, 30px) 100px;
+	grid-template-rows: repeat(40, 30px) 1200px;
 	background-image: linear-gradient(to bottom, rgba(255,255,255,0.9),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.9),rgba(255,255,255,0.9),rgba(255,255,255,0.9),rgba(255,255,255,0.9));
 	background-size: 1000px 2400px;
 	width: 950px;
@@ -568,7 +567,7 @@ input.sheet-salvoRollButton + span.sheet-salvoRollButton, input.sheet-salvoRollB
 
 .sheet-salvoTitle
 {
-	grid-area: title;
+	grid-area: 1/15/2/-15;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/terminal.png);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -584,18 +583,14 @@ input.sheet-salvoRollButton + span.sheet-salvoRollButton, input.sheet-salvoRollB
 	height: 32px;
 }
 
-.sheet-taskDice
+.sheet-skillChoice
 {
-	grid-area: taskDice;
-	display: grid;
-	grid-template-columns: 10px 24px 1fr 1fr 2fr;
-	grid-template-rows: 32px repeat(3,1fr);
+
 }
 
-.sheet-taskTitle
+.sheet-skillDirection
 {
-	justify-self: start;
-	justify-self: center;
+	grid-area: 2/2/3/6;
 }
 
 .sheet-threatDice
