Updated styles for Salvo Mode

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -593,6 +593,39 @@ input.sheet-salvoRollButton + span.sheet-salvoRollButton, input.sheet-salvoRollB
 	grid-area: 2/2/3/6;
 }
 
+.sheet-salvoSkillRatingBox
+{
+	grid-area: 3/2/6/6;
+
+}
+
+input[type=number].sheet-salvoSkillRating
+{
+	align-self: start;
+	justify-self: center;
+	height: 70px;
+	width:100px;
+}
+
+input[type=text].sheet-salvoSkill
+{
+	align-self: end;
+	justify-self: center;
+	height: 20px;
+	width: 180px;
+
+}
+
+.sheet-inputBox
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/Input.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 200px 104px;
+	width: 200px;
+	height: 104px;
+}
+
 .sheet-threatDice
 {
 	grid-area: threatDice;
