--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -402,6 +402,10 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
     align-items: center;
     margin-top: 2px;
 }
+.sheet-row-textarea {
+    height: 100%    ;
+}
+
 
 .sheet-row:nth-child(1), .sheet-row+.sheet-hr{
     height: auto;
@@ -560,10 +564,15 @@ input.sheet-tab0 + span {
 
 .sheet-toggle:checked ~ .sheet-row-details { 
     display: inline-block !important; 
-    margin: 0 0 2px 48px;
-    width: calc( 100% - 58px );
+    margin: 0 0 2px 25px;
+    width: calc( 100% - 35px );
     border-left: 2px solid var(--border-color);
     border-bottom: 2px solid var(--border-color);
+}
+
+.sheet-toggle-highlight ~ .sheet-toggle:checked ~ .sheet-row-details { 
+    margin: 0 0 2px 48px;
+    width: calc( 100% - 58px );
 }
 
 .sheet-toggle ~ .sheet-row-details { 
@@ -819,7 +828,7 @@ input.sheet-tab0 + span {
     line-height: 22px;
 
     margin: 0;
-    margin-left: -20px;
+    margin-left: 0px;
     padding: 0 0 1px 0;
 
     text-align: center;
@@ -835,8 +844,8 @@ input.sheet-tab0 + span {
     
 }
 
-.sheet-tab1 .sheet-checkbox:before{
-    margin-left: 0px!important;
+.sheet-toggle-highlight ~ .sheet-checkbox:before{
+    margin-left: -20px!important;
 }
 
 .sheet-box .sheet-boolean ~ .sheet-checkbox:before {
@@ -1286,8 +1295,9 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 
 .sheet-options {
     width: 100%;
+    display: flex;
     margin-bottom: 10px;
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid var(--border-color);
 }
 
 .sheet-options.sheet-short-height {
@@ -1295,7 +1305,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 
 .sheet-options.sheet-medium-height {
-    height: 360px;
+    height: 380px;
 }
 
 .sheet-options.sheet-tall-height {
@@ -1308,9 +1318,15 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 
 .sheet-options .sheet-option-container {
-    outline: 1px solid gray;
+    outline: 1px solid var(--border-color);
     padding: 5px;
+    background-color: var(--odd-row-bg);
+    color:var(--main-text);
     margin: 0 15px 10px 0;
+}
+
+.sheet-options .sheet-option-container h4{
+    color:var(--header-text);
 }
 
 .sheet-options .sheet-option-container.sheet-damage-dice {
@@ -1502,22 +1518,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-traits .sheet-col3 { width: 30px; }
 .sheet-traits .sheet-col4 { width: 60px; }
 .sheet-traits .sheet-row-stats .sheet-col0 { margin-left: 20px; width: calc(100% - 157px); }
-
-.sheet-perks-area .sheet-col4 {
-    width: 57px;
-}
-
-.sheet-perks-area .repcontrol {
-    margin-right: 5px;
-}
-
-.sheet-quirks-area .repitem {
-    margin-left: 5px;
-}
-
-.sheet-quirks-area .repcontrol {
-    margin-left: 5px;
-}
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-traits .repcontainer.ui-sortable.editmode .sheet-checkbox,
@@ -2001,12 +2001,6 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 
-/* hide checkbox if modifying row */
-.sheet-active-defense .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
-    opacity: 0;
-    z-index: -1;
-}
-
 .sheet-active-defense .sheet-margin-left {
     margin-left: 0px;
 }
@@ -2097,10 +2091,6 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     left: 0px;
 }
 
-.sheet-row-static-defense {
-    position: relative;
-}
-
 .sheet-active-defense .sheet-toggle-notes.sheet-static-defense {
     position: absolute;
     left: 33px;
@@ -2111,8 +2101,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox.sheet-static-defense {
-    position: absolute;
-    left: 22px;
+    left: 54px;
 }
 
 /* Text Area Box Styling for Defense Bonus (DB) Notes*/
